# assembly-mcp

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.claude/commands/: convert-mdtopdf.md  convert-pdftomd.md
src/assembly_mcp/: __init__.py  md_to_pdf.py  pdf_to_md.py  server.py
tests/: test_smoke.py
